add_executable(udpconnectclient udpconnectclient.c)
target_link_libraries(udpconnectclient yolanda)

add_executable(udpconnectserver udpconnectserver.c)
target_link_libraries(udpconnectserver yolanda)

add_executable(udpconnectclient02 udpconnectclient02.c)
target_link_libraries(udpconnectclient02 yolanda)


