add_executable(reliable_client01 reliable_client01.c)
target_link_libraries(reliable_client01 yolanda)

add_executable(reliable_server01 reliable_server01.c)
target_link_libraries(reliable_server01 yolanda)


add_executable(reliable_server02 reliable_server02.c)
target_link_libraries(reliable_server02 yolanda)

add_executable(reliable_client02 reliable_client02.c)
target_link_libraries(reliable_client02 yolanda)


