add_executable(bufferclient bufferclient.c)
target_link_libraries(bufferclient yolanda)

add_executable(samplebuffer01 samplebuffer01.c)
target_link_libraries(samplebuffer01 yolanda)

add_executable(samplebuffer02 samplebuffer02.c)
target_link_libraries(samplebuffer02 yolanda)

add_executable(samplebuffer03 samplebuffer03.c)
target_link_libraries(samplebuffer03 yolanda)
